--- a/src/scss/componentes/_headerRegistro.scss
+++ b/src/scss/componentes/_headerRegistro.scss
@@ -1,6 +1,6 @@
 .header-registro{
   background : $colorPrincipal;
-  padding: $separacion;
+  padding: 20px;
   display: flex;
   column-gap: 2rem;
   margin-bottom: $separacion;
