--- a/src/scss/paginas/_convocatoriaSesiones.scss
+++ b/src/scss/paginas/_convocatoriaSesiones.scss
@@ -5,17 +5,91 @@
     display: block;
   }
 }
+
 .instrucciones {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: center; 
+
+  figure img{
+    margin-bottom: 20px; 
+    width: 40%;
+    box-shadow: #bdb7b7 5px 5px 10px;
+    border-radius: 50%;
+  }
+
+  h4{
+    font-size: 1.2rem;
+    line-height: 2rem;
+    color: $blanco;
+    background-color: $colorPrincipal;
+    font-family: $fuenteMedium;
+    // width: 100%;
+  }
+  >div{
+    padding: 0px;
+  }
+  p{
+    margin: 1rem 2rem;
+  }
+}
+
+.elecciones_fechas{
+  h5{
+    color: $colorPrincipal;
+    font-size: 1rem;
+    font-weight: bold;
+  }
+}
+
+.sobre_sesion{
+  span{
+    font-weight: bold;
+    color: $colorPrincipal;
+  }
+}
+
+.imgBeneficios{
+  display: grid;
+  grid-template-columns: repeat(3, 100px);
+  grid-template-rows: auto;
+  gap: 25px;
+  img{
+    width: 100px;
+    transition: 1s;
+    border-radius: 50%;
+    &:hover{
+      box-shadow: #cddc0b 2px 4px 8px 0px;
+      transform: translateY(-10px);
+    }
+  }
+}
+
+.foto_perfil{
+  display: flex;
+  text-align: center;
+  align-items: center;
+  figure img{
+    width: 70%;
+  }
+}
+
+
+//Instrucciones formulario
+.infoAbstract {
   background-color: $cielo;
   padding: 20px;
   text-align: justify;
   font-size: 14px;
-  color: $colorPrincipal;
+  color: $gris;
   height: auto;
+
+  strong{
+    color: $colorPrincipal;
+  }
 }
-
 .formPropuestas{
-
   .encabezado {
     color: $colorPrincipal;
     text-transform: uppercase;
@@ -23,7 +97,7 @@
     font-weight: bold;
     letter-spacing: .5px;
     margin-bottom: 1em;
-    border-bottom: 1px solid #e2dfdf; 
+    border-bottom: 1px solid $colorPrincipal; 
   }
   .avatar{
     height: 60px;
