--- a/src/scss/base/_botones.scss
+++ b/src/scss/base/_botones.scss
@@ -4,7 +4,7 @@
   font-size: 18px;
   text-transform: uppercase;
   font-family: $fuenteResaltado;
-  letter-spacing: 1px;
+  letter-spacing: 0.5px;
   border: none;
   text-decoration: none;  
 }
@@ -12,20 +12,43 @@
 .btn__principal {
   padding: 10px 40px;
   color: $colorPrincipal;
-  font-family: $fuenteTitulo3;
-  background: $verde;
+  font-family: $fuenteMedium;
+  background: linear-gradient(to right , #00b936, #d2dd0a);
   border-radius: 30px;
-  transition: 1s;
+  transition-duration: 1s;
+  position: relative;
   @media screen and (max-width: 1280px) {
     padding: 5px 10px;
     font-size: 0.8rem;
   }
   &:hover{
-    background: linear-gradient(to right , #00b936, #d2dd0a);
-    color: #FFF;
+    background: linear-gradient(to right, #d2dd0a,  #00b936);
+    color: $colorPrincipal;
+    transform: scale(1.05);
   }
+  
  
 }
+
+
+  .btn__principal:before {
+		// top:10px;
+		// bottom:10px;
+		// left:0;
+		// right:50%;
+		-webkit-box-shadow:0 0 15px rgba(0,0,0,0.6);
+		-moz-box-shadow:0 0 15px rgba(0,0,0,0.6);
+		box-shadow:0 0 15px rgba(0,0,0,0.6);
+		-moz-border-radius:10px / 100px;
+		// border-radius:10px / 100px;
+    position: absolute;
+    top:50%;
+		bottom:0;
+		left:10px;
+		right:10px;
+		-moz-border-radius:100px / 10px;
+		border-radius:100px / 10px;
+	}
 
 
 .btn__secundario{
