--- a/src/scss/base/_mixins.scss
+++ b/src/scss/base/_mixins.scss
@@ -19,14 +19,12 @@
 }
 
 
-@mixin subtitulo($color, $background){
+@mixin subtitulo($color){
   color: $color;
-  background-color: $background;
-  padding: 10px 50px;
+  // padding: 10px 50px;
   text-transform: uppercase;
   font-family: $fuenteTitulo2;
   width: max-content;
-  margin: 0 auto;
   
 }
 
