--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,24 +1,22 @@
-$colorPrincipal : #1d3149;
-$azul : #004a80;
+$colorPrincipal : #004a80;
+$azul : #57a8e5;
 $verde : #00b936;
 $amarillo : #d2dd0a;
 $cielo : #cae1f3;
 $blanco : #ffffff;
-
+$gris : #353535;
 
 $separacion : 5rem;
-
 
 //Media Queries
 $telefono : 480px;
 $tablet : 768px ;
 $desktop: 1200px;
 
-
 //===== Fuentes ====
 $fuenteTitulo1 : 'Arial Black';
 $fuenteTitulo2 : 'Arial Bold';
-$fuenteTitulo3 : 'Arial Medium';
+$fuenteMedium : 'Arial Medium';
 $fuenteSubtitulo : 'Arial Bold';
 $fuenteContenido : 'Arial';
 $fuenteResaltado : 'Arial Bold';
