--- a/src/scss/componentes/_footer.scss
+++ b/src/scss/componentes/_footer.scss
@@ -1,4 +1,5 @@
 .footer{
+  margin-top:40px;
   background: $colorPrincipal;
   padding: 20px 0px 0px 20px;
   &__logotipo{
@@ -30,7 +31,7 @@
   h3{
     margin-bottom: 3px;
     padding: 0;
-    letter-spacing: 0.5px;
+    letter-spacing: 6px;
     font-family: $fuenteTitulo1;
     font-size: 14px;
     @media screen and (max-width: 500px){
@@ -40,7 +41,7 @@
     }
   }
   h2{
-    font-family: $fuenteTitulo2;
+    font-family: $fuenteTitulo1;
     margin-top: -12px;
     letter-spacing: .1px;
     @media screen and (max-width: 500px){
@@ -51,7 +52,7 @@
   h4{
     margin-top: -13px;
     font-size: 12px;
-    letter-spacing: 1px;
+    letter-spacing: 8px;
     @media screen and (max-width: 500px){
       font-size: 10px;
       letter-spacing: 0px;
