--- a/src/scss/componentes/_headerPaginas.scss
+++ b/src/scss/componentes/_headerPaginas.scss
@@ -5,15 +5,17 @@
   height: 50vh;
   background-color: $azul;
   margin: 0;
+  position: relative;
   // border: 1px solid red;
   @media screen and (max-width: 500px){
     height: 180px;
   }
+
   .titulo_pagina{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 30vh;
+    min-height: 80%;
     flex-direction: column;
     hgroup, h1{
       text-align: center;
@@ -48,6 +50,39 @@
     }
   }
 }
+
+.header:before,
+	.header:after {
+    content: "";
+    position: absolute;
+    z-index: -2;
+    // border: 2px solid red;
+		bottom:15px;
+		left:10px;
+		width:100%;
+		height:20%;
+		max-width:93%;
+		max-height:100px;
+		-webkit-box-shadow:0 15px 10px rgba(0, 0, 0, 0.7);
+		   -moz-box-shadow:0 15px 10px rgba(0, 0, 0, 0.7);
+				box-shadow:0 15px 10px rgba(0, 0, 0, 0.7);
+		-webkit-transform:rotate(-1deg);
+		   -moz-transform:rotate(-1deg);
+			-ms-transform:rotate(-1deg);
+			 -o-transform:rotate(-1deg);
+				transform:rotate(-1deg);
+	}
+
+	.header:after {
+		right:10px;
+		left:auto;
+		-webkit-transform:rotate(1deg);
+		   -moz-transform:rotate(1deg);
+			-ms-transform:rotate(1deg);
+			 -o-transform:rotate(1deg);
+				transform:rotate(1deg);
+	}
+
 .header_covid{
   background-image: url('../img/bg_1.jpg');
 }
@@ -88,7 +123,7 @@
   background-image: url('../img/bg_6.png');
 }
 .h_convocatoria{
-  background-image: url('../img/encabezados/encabezados-12.jpg');
+  background-image: url('../img/header1.jpg');
 }
 .h_sede{
   background-image: url('../img/headers/sede.jpg');
