--- a/src/scss/paginas/_convocatorias.scss
+++ b/src/scss/paginas/_convocatorias.scss
@@ -8,13 +8,14 @@
   
   .convocatorias{
     height: 80vh;
-    margin-top: 10vh;
+    margin-top: 5vh;
     margin-left: 10vw;
   }
     .logotipoConvocatoria
     {
       height: 15vh;
-      margin-bottom: 4rem;
+      margin-bottom: 1.2rem;
+      
       @media screen and(max-width: 800px) {
         height: 10vh;
         margin-bottom: 2rem;
@@ -23,21 +24,65 @@
 
     hgroup{
       text-transform: uppercase;
+      h1,
+      h2,
+      h3{
+        font-family: $fuenteTitulo2;
+        margin-bottom: 0px;
+        padding: 0px;
+      }
       h1{
         color: white;
         font-size: 5.5rem;
-        font-family: "Arial";
-        font-weight: 700;
+        line-height: 5.5rem;
+        text-shadow: 5px 5px 15px #211f24;
+        // font-family: $fuenteTitulo2;
+        // font-weight: 700;
         span{
           color: $verde;
         }
         @media screen and(max-width: 1200px) {
-          font-size: 3.5rem;
+          font-size: 3rem;
+          line-height: 3rem;
         }
         @media screen and(max-width: 500px) {
           font-size: 2.5rem;
+          line-height: 2.5rem;
         }
       }
+      h2{
+        color: white;
+        font-size: 2rem;
+        letter-spacing: 6.7px;
+        margin-top: -10px;
+        text-shadow: 3px 2px 5px #2e2c35;
+        @media screen and(max-width: 800px) {
+          font-size: 1.3rem;
+        letter-spacing: 1.3px;
+        margin-top: -2px;
+        }
+        @media screen and(max-width: 500px) {
+          font-size: 1.2rem;
+        letter-spacing: 0px;
+        margin-top: -2px;
+        }
+      }
+      h3{
+        color: $verde;
+        font-size: 1.5rem;
+        margin-top: -10px;
+        text-shadow: 3px 2px 5px #2e2c35;
+        @media screen and(max-width: 800px) {
+          font-size: 1.1rem;
+          margin-top: -3px;
+        }
+        @media screen and(max-width: 500px) {
+          font-size: 0.8rem;
+        letter-spacing: 0px;
+        margin-top: -2px;
+        }
+      }
+      
     }
 
     .listaConvocatorias{
@@ -53,6 +98,7 @@
         color: white;
         font-family: $fuenteSubtitulo;
         font-size: 1.5rem;
+        text-shadow: 3px 2px 5px #2e2c35;
         @media screen and (max-width: 1280px) {
           font-size: 1.2rem;
         }
@@ -95,7 +141,7 @@
 
 .line{
   width: 30vw;
-  margin-bottom: 1rem;
+  margin: 0.4rem 0;
   display: block;
 }
 .nota{
@@ -103,6 +149,7 @@
   font-family: $fuenteSubtitulo;
   text-transform: uppercase;
   letter-spacing: 1px;
+  text-shadow: 3px 2px 5px #2e2c35;
   @media screen and(max-width: 500px) {
     font-size: 0.5rem;
   }
